# CompressionBenchmark

./: .gitignore  .gitmodules  CMakeLists.txt  Makefile  cli_main.cpp  library.h  main.cpp  results.csv
src/: benchmarker.hpp
src/algorithms/: api.hpp  fsst.hpp  impl_dictionary.hpp  impl_fsst.hpp  impl_fsst12.hpp  impl_lz4.hpp  impl_onpair.hpp  impl_onpair16.hpp  impl_onpair_mini.hpp  interface.hpp  onpair.hpp
src/algorithms/fsst12/: fsst12.h  libfsst12.cpp  libfsst12.hpp
src/models/: benchmark_config.hpp  compression_result.hpp  string_collection.hpp
src/models/algorithm/: impl_fsst.hpp  interface.hpp
src/schema/: config_creator.hpp
src/utils/: bitpacking_utils.hpp  csv_utils.hpp  error_handler.hpp
tools/: benchmark.py
